frotend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asset-management
spec:
  ingressClassName: nginx
  rules:
    - host: asset.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: asset-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asset-frontend
                port:
                  number: 80
